crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__type_record_colon.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "type X = { name String }"
---
alder::syntax

  × I was expecting a colon after this record field name
   ╭─[/project/src/main.ald:1:17]
 1 │ type X = { name String }
   ·          ┬      ┬
   ·          │      ╰── expected `:` or `?:`
   ·          ╰── this record type starts here
   ╰────
