crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__type_record_extension.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "type X = { r | }"
---
alder::syntax

  × an extended record type needs at least one field
   ╭─[/project/src/main.ald:1:16]
 1 │ type X = { r | }
   ·          ┬     ┬
   ·          │     ╰── expected a field after `|`
   ·          ╰── this record type starts here
   ╰────
