crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__type_record_nested.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "type X = { name: Array[] }"
---
alder::syntax

  × type argument lists cannot be empty
   ╭─[/project/src/main.ald:1:24]
 1 │ type X = { name: Array[] }
   ·                       ┬┬
   ·                       │╰── add a type argument or remove `[]`
   ·                       ╰── this type argument list starts here
   ╰────
