crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__type_tuple_end.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "type X = (a, b"
---
alder::syntax

  × I was expecting another tuple type or `)` at the end of the file
   ╭─[/project/src/main.ald:1:15]
 1 │ type X = (a, b
   ·          ┬
   ·          ╰── this tuple type starts here
   ╰────
  help: separate tuple entries with commas and close the type with `)`
