crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__type_tuple_nested.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "type X = (a, 1)"
---
alder::syntax

  × I was expecting a type
   ╭─[/project/src/main.ald:1:14]
 1 │ type X = (a, 1)
   ·          ┬   ┬
   ·          │   ╰── expected a type here
   ·          ╰── this tuple type starts here
   ╰────
  help: types include names like `Number`, applications like `Array[Number]`,
        and type variables like `a`
