crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__where_additional_bound.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "fn f() where a: Show + 1 {}"
---
alder::syntax

  × I was expecting a trait name in this bound
   ╭─[/project/src/main.ald:1:24]
 1 │ fn f() where a: Show + 1 {}
   · ┬                      ┬
   · │                      ╰── expected an upper-case trait path
   · ╰── this function declaration starts here
   ╰────
