crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__where_assoc_name.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "fn f() where i.item == Number {}"
---
alder::syntax

  × I was expecting an associated type name after `.`
   ╭─[/project/src/main.ald:1:16]
 1 │ fn f() where i.item == Number {}
   · ┬              ┬
   · │              ╰── expected an upper-case name
   · ╰── this function declaration starts here
   ╰────
