crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__where_assoc_type.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "fn f() where i.Item == 1 {}"
---
alder::syntax

  × I was expecting a type
   ╭─[/project/src/main.ald:1:24]
 1 │ fn f() where i.Item == 1 {}
   · ┬                      ┬
   · │                      ╰── expected a type here
   · ╰── this function declaration starts here
   ╰────
  help: types include names like `Number`, applications like `Array[Number]`,
        and type variables like `a`
